# lng-carriers-researcher

./: .gitignore  CLAUDE.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.claude/: README.md  settings.json
batches/: README.md  _template_notes.md
batches/2026-06-03_discovery_since_may_2026/: apply.json  apply_patch.csv  apply_rows.csv  candidates.json  conflicts.csv  decisions.csv  digest.md  lng_carrier_candidate_vessels.xlsx  notes.md
batches/2026-06-04_data_fill_rows_1144-1223/: apply.json  apply_patch.csv  apply_rows.csv  conflicts.csv  data_fill.json  decisions.csv  digest.md  lng_carrier_data_fill.xlsx  notes.md  verify_report.csv
batches/2026-06-04_fix_rows_1216-1217/: corrected_rows.csv  corrections.md  lng_carrier_fix_rows_1216-1217.xlsx
data/: README.md  csb_yard_urls.md  owner_charterer_map.md  shipowner_facts.csv  source_roster.md
docs/: inclusion_criteria.md  pointers.md
docs/sops/: apply.md  (+6 more)
refdata/: controlled_vocab.md  owner_charterer_map.md  qc_allowlist.csv  shipbuilder_facts.csv  source_roster.md
scripts/: apply_batch.py  batch_digest.py  build_workbook.py  csb_fetch.py  dedup_index.py  dedupe_check.py  derive_corroborate.py  derive_fills.py  fsru_reconcile.py  imo_tracker.py  lookups.py  merge_fills.py  normalize.py  paths.py  pull_backend.py  qc_backend.py  recalc.py  seed_lookups.py  url_verifier.py  verify_apply.py
tests/: README.md  conftest.py  test_apply_pipeline.py  test_fsru_reconcile.py  test_lookups.py  test_normalize.py  test_normalize_fsru.py  test_qc_backend.py  test_url_verifier.py
tools/: apply_patch.gs
(+27 files in other folders)
